fix position and spacing of submit button, remove hr

--- a/assets/src/scss/components/base.scss
+++ b/assets/src/scss/components/base.scss
@@ -218,6 +218,5 @@
 }
 
 .submit-column{
-	text-align:right;
-	width:100% !important;
+	padding-top: 25px;
 }
